added tests for util functions
